2014-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineSelection.h:
	* X3DOutlineTreeView.h:
	* OutlineSelection.cpp:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.h:
	* OutlineTreeViewEditor.cpp: 

2014-07-09  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* X3DEditorObject.h:
	* X3DEditorObject.cpp:
	* X3DEditorInterface.h:
	* X3DMaterialEditorInterface.h:
	* GeometryPropertiesEditor.xml:
	* X3DNodePropertiesEditorInterface.h:
	* OutlineCellRenderer.cpp:
	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp: 

2014-07-08  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineSelection.h:
	* OutlineSelection.cpp:
	* X3DOutlineTreeView.h:
	* X3DOutlineTreeView.cpp:
	* GeometryPropertiesEditor.xml:
	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp: 

2014-07-07  Holger Seelig  <holger.seelig@yahoo.de>

	* MaterialEditor.xml:
	* GeometryPropertiesEditor.xml:
	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp: 

2014-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* GeometryPropertiesEditor.xml:
	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp:
	* X3DGeometryPropertiesEditorInterface.h:
	* X3DGeometryPropertiesEditorInterface.cpp: 

2014-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp: 

2014-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* MaterialEditor.h:
	* MaterialEditor.cpp:
	* MaterialEditor.xml:
	* X3DMaterialEditorInterface.h:
	* X3DMaterialEditorInterface.cpp:
	* GeometryPropertiesEditor.h:
	* GeometryPropertiesEditor.cpp: 

2014-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* BrowserWindow.cpp:
	* BrowserWindow.xml: