@@ -44,6 +44,7 @@
             <property name="can_focus">True</property>
             <property name="expanded">True</property>
             <property name="spacing">8</property>
+            <property name="resize_toplevel">True</property>
             <child>
               <object class="GtkGrid" id="grid1">
                 <property name="visible">True</property>
@@ -268,6 +269,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="spacing">8</property>
+            <property name="resize_toplevel">True</property>
             <child>
               <object class="GtkGrid" id="TextureCoordinateGeneratorBox">
                 <property name="visible">True</property>
