@@ -153,6 +153,7 @@
                     <property name="can_focus">False</property>
                     <property name="expanded">True</property>
                     <property name="spacing">8</property>
+                    <property name="resize_toplevel">True</property>
                     <child>
                       <object class="GtkGrid" id="grid1">
                         <property name="visible">True</property>
@@ -398,6 +399,7 @@
                     <property name="sensitive">False</property>
                     <property name="can_focus">False</property>
                     <property name="spacing">8</property>
+                    <property name="resize_toplevel">True</property>
                     <child>
                       <object class="GtkGrid" id="grid2">
                         <property name="visible">True</property>
