@@ -68,7 +68,7 @@ TextureCoordinateGenerator::TextureCoordinateGenerator (X3DExecutionContext* con
 	             X3DBaseNode (executionContext -> getBrowser (), executionContext),
 	X3DTextureCoordinateNode (),
 	                  fields (),
-	              texGenMode ()
+	                modeType (SPHERE)
 {
 	addType (X3DConstants::TextureCoordinateGenerator);
 
@@ -92,31 +92,44 @@ TextureCoordinateGenerator::initialize ()
 
 	set_mode ();
 }
+//	static const std::map <std::string, GLenum> modes = {
+//		std::make_pair ("SPHERE",                      GL_SPHERE_MAP),     // Ok
+//		std::make_pair ("SPHERE-LOCAL",                GL_SPHERE_MAP),     // Not supported
+//		std::make_pair ("SPHERE-REFLECT",              GL_REFLECTION_MAP), // Not supported
+//		std::make_pair ("SPHERE-REFLECT-LOCAL",        GL_REFLECTION_MAP), // Not supported
+//		std::make_pair ("CAMERASPACENORMAL",           GL_NORMAL_MAP),     // Ok
+//		std::make_pair ("CAMERASPACEPOSITION",         GL_EYE_LINEAR),     // Like COORD-EYE ???
+//		std::make_pair ("CAMERASPACEREFLECTIONVECTOR", GL_REFLECTION_MAP), // Ok
+//		std::make_pair ("COORD-EYE",                   GL_EYE_LINEAR),     // Ok
+//		std::make_pair ("COORD",                       GL_OBJECT_LINEAR),  // Ok
+//		std::make_pair ("NOISE-EYE",                   GL_SPHERE_MAP),     // Not supported
+//		std::make_pair ("NOISE",                       GL_SPHERE_MAP)      // Not supported
+//	};
 
 void
 TextureCoordinateGenerator::set_mode ()
 {
-	static const std::map <std::string, GLenum> modes = {
-		std::make_pair ("SPHERE",                      GL_SPHERE_MAP),     // Ok
-		std::make_pair ("SPHERE-LOCAL",                GL_SPHERE_MAP),     // Not supported
-		std::make_pair ("SPHERE-REFLECT",              GL_REFLECTION_MAP), // Not supported
-		std::make_pair ("SPHERE-REFLECT-LOCAL",        GL_REFLECTION_MAP), // Not supported
-		std::make_pair ("CAMERASPACENORMAL",           GL_NORMAL_MAP),     // Ok
-		std::make_pair ("CAMERASPACEPOSITION",         GL_EYE_LINEAR),     // Like COORD-EYE ???
-		std::make_pair ("CAMERASPACEREFLECTIONVECTOR", GL_REFLECTION_MAP), // Ok
-		std::make_pair ("COORD-EYE",                   GL_EYE_LINEAR),     // Ok
-		std::make_pair ("COORD",                       GL_OBJECT_LINEAR),  // Ok
-		std::make_pair ("NOISE-EYE",                   GL_SPHERE_MAP),     // Not supported
-		std::make_pair ("NOISE",                       GL_SPHERE_MAP)      // Not supported
+	static const std::map <std::string, ModeType> modes = {
+		std::make_pair ("SPHERE",                      SPHERE),
+		std::make_pair ("SPHERE-LOCAL",                SPHERE_LOCAL),
+		std::make_pair ("SPHERE-REFLECT",              SPHERE_REFLECT),
+		std::make_pair ("SPHERE-REFLECT-LOCAL",        SPHERE_REFLECT_LOCAL),
+		std::make_pair ("CAMERASPACENORMAL",           CAMERASPACENORMAL),
+		std::make_pair ("CAMERASPACEPOSITION",         CAMERASPACEPOSITION),
+		std::make_pair ("CAMERASPACEREFLECTIONVECTOR", CAMERASPACEREFLECTIONVECTOR),
+		std::make_pair ("COORD-EYE",                   COORD_EYE),
+		std::make_pair ("COORD",                       COORD),
+		std::make_pair ("NOISE-EYE",                   NOISE_EYE),
+		std::make_pair ("NOISE",                       NOISE)
 	};
 
 	try
 	{
-		texGenMode = modes .at (mode ());
+		modeType = modes .at (mode ());
 	}
 	catch (const std::out_of_range &)
 	{
-		texGenMode = GL_SPHERE_MAP;
+		modeType = SPHERE;
 	}
 }
 
@@ -131,33 +144,139 @@ TextureCoordinateGenerator::enable (const int32_t unit, const size_t, const TexC
 {
 	glActiveTexture (GL_TEXTURE0 + unit);
 
-	glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, texGenMode);
-	glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, texGenMode);
-	glEnable (GL_TEXTURE_GEN_S);
-	glEnable (GL_TEXTURE_GEN_T);
+	static constexpr Vector4f sPlane (1, 0, 0, 0);
+	static constexpr Vector4f tPlane (0, 1, 0, 0);
+	static constexpr Vector4f rPlane (0, 0, 0, 0);
+	static constexpr Vector4f qPlane (0, 0, 0, 0);
 
-	if (texGenMode not_eq GL_SPHERE_MAP)
+	switch (modeType)
 	{
-		glTexGeni (GL_R, GL_TEXTURE_GEN_MODE, texGenMode);
-		glEnable (GL_TEXTURE_GEN_R);
-		//glTexGeni (GL_Q, GL_TEXTURE_GEN_MODE, modeType .texGenMode);
-		//glEnable (GL_TEXTURE_GEN_Q);
+		case SPHERE:
+		{
+			// Ok
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			break;
+		}
+		case SPHERE_LOCAL:
+		{
+			// Not supported
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			break;
+		}
+		case SPHERE_REFLECT:
+		{
+			// Not supported
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			break;
+		}
+		case SPHERE_REFLECT_LOCAL:
+		{
+			// Not supported
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			break;
+		}
+		case CAMERASPACENORMAL:
+		{
+			// Ok
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_NORMAL_MAP);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_NORMAL_MAP);
+			glTexGeni (GL_R, GL_TEXTURE_GEN_MODE, GL_NORMAL_MAP);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			glEnable (GL_TEXTURE_GEN_R);
+			break;
+		}
+		case CAMERASPACEPOSITION:
+		{
+			// Not supported
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_EYE_LINEAR);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_EYE_LINEAR);
+			glTexGeni (GL_R, GL_TEXTURE_GEN_MODE, GL_EYE_LINEAR);
+			//glTexGeni (GL_Q, GL_TEXTURE_GEN_MODE, GL_EYE_LINEAR);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			glEnable (GL_TEXTURE_GEN_R);
+			//glEnable (GL_TEXTURE_GEN_Q);
+			break;
+		}
+		case CAMERASPACEREFLECTIONVECTOR:
+		{
+			// Ok
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_REFLECTION_MAP);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_REFLECTION_MAP);
+			glTexGeni (GL_R, GL_TEXTURE_GEN_MODE, GL_REFLECTION_MAP);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			glEnable (GL_TEXTURE_GEN_R);
+			break;
+		}
+		case COORD_EYE:
+		{
+			// Ok
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_EYE_LINEAR);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_EYE_LINEAR);
+			glTexGeni (GL_R, GL_TEXTURE_GEN_MODE, GL_EYE_LINEAR);
+			//glTexGeni (GL_Q, GL_TEXTURE_GEN_MODE, GL_EYE_LINEAR);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			glEnable (GL_TEXTURE_GEN_R);
+			//glEnable (GL_TEXTURE_GEN_Q);
+			break;
+		}
+		case COORD:
+		{
+			// Ok
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_OBJECT_LINEAR);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_OBJECT_LINEAR);
+			glTexGeni (GL_R, GL_TEXTURE_GEN_MODE, GL_OBJECT_LINEAR);
+			//glTexGeni (GL_Q, GL_TEXTURE_GEN_MODE, GL_OBJECT_LINEAR);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			glEnable (GL_TEXTURE_GEN_R);
+			//glEnable (GL_TEXTURE_GEN_Q);
+			break;
+		}
+		case NOISE_EYE:
+		{
+			// Not supported
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			break;
+		}
+		case NOISE:
+		{
+			// Not supported
+			glTexGeni (GL_S, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glTexGeni (GL_T, GL_TEXTURE_GEN_MODE, GL_SPHERE_MAP);
+			glEnable (GL_TEXTURE_GEN_S);
+			glEnable (GL_TEXTURE_GEN_T);
+			break;
+		}
 	}
 
-	//	Vector4f sVector (1, 0, 0, 0);
-	//	Vector4f tVector (0, 1, 0, 0);
-	//	Vector4f rVector (0, 0, 1, 0);
-	//	Vector4f qVector (0, 0, 0, 1);
-	//
-	//	glTexGenfv (GL_S, GL_OBJECT_PLANE, sVector .data ());
-	//	glTexGenfv (GL_T, GL_OBJECT_PLANE, tVector .data ());
-	//	glTexGenfv (GL_R, GL_OBJECT_PLANE, rVector .data ());
-	//	glTexGenfv (GL_Q, GL_OBJECT_PLANE, qVector .data ());
-	//
-	//	glTexGenfv (GL_S, GL_EYE_PLANE, sVector .data ());
-	//	glTexGenfv (GL_T, GL_EYE_PLANE, tVector .data ());
-	//	glTexGenfv (GL_R, GL_EYE_PLANE, rVector .data ());
-	//	glTexGenfv (GL_Q, GL_EYE_PLANE, qVector .data ());
+//	glTexGenfv (GL_S, GL_EYE_PLANE, sPlane .data ());
+//	glTexGenfv (GL_T, GL_EYE_PLANE, tPlane .data ());
+//	glTexGenfv (GL_R, GL_EYE_PLANE, rPlane .data ());
+//	glTexGenfv (GL_Q, GL_EYE_PLANE, qPlane .data ());
+
+//	glTexGenfv (GL_S, GL_OBJECT_PLANE, sPlane .data ());
+//	glTexGenfv (GL_T, GL_OBJECT_PLANE, tPlane .data ());
+//	glTexGenfv (GL_R, GL_OBJECT_PLANE, rPlane .data ());
+//	glTexGenfv (GL_Q, GL_OBJECT_PLANE, qPlane .data ());
 }
 
 void
@@ -168,7 +287,7 @@ TextureCoordinateGenerator::disable (const int32_t unit) const
 	glDisable (GL_TEXTURE_GEN_S);
 	glDisable (GL_TEXTURE_GEN_T);
 	glDisable (GL_TEXTURE_GEN_R);
-	//glDisable (GL_TEXTURE_GEN_Q);
+	glDisable (GL_TEXTURE_GEN_Q);
 }
 
 } // X3D
