@@ -2,6 +2,10 @@
 
 	* main.cpp: 
 
+2014-07-09  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* main.cpp: 
+
 2014-07-08  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* main.cpp:
